Test of wrong path execution using random wrong paths and SBBT traces.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,48 +19,34 @@ FetchContent_Declare(MBPlib
 )
 FetchContent_MakeAvailable(MBPlib)
 
-add_executable(mbp_tagescl_64kb
-  src/mbplib_main.cpp
-)
-set_target_properties(mbp_tagescl_64kb
-  PROPERTIES CXX_STANDARD 17 INTERPROCEDURAL_OPTIMIZATION TRUE
-)
+function(add_test_compile_options target)
+  set_target_properties(${target}
+    PROPERTIES CXX_STANDARD 17 INTERPROCEDURAL_OPTIMIZATION TRUE
+  )
+  target_include_directories(${target} PRIVATE include)
+  target_compile_options(${target}
+    PRIVATE "-Wall" "-O3" "-march=native" "-mtune=native"
+  )
+endfunction()
+
+add_executable(mbp_tagescl_64kb src/mbplib_main.cpp)
+add_test_compile_options(mbp_tagescl_64kb)
 target_compile_definitions(mbp_tagescl_64kb PRIVATE TAGE_SC_L_SIZE=64)
-target_include_directories(mbp_tagescl_64kb PRIVATE include)
-target_compile_options(mbp_tagescl_64kb
-  PRIVATE "-Wall" "-O3" "-march=native" "-mtune=native"
-)
 target_link_libraries(mbp_tagescl_64kb PRIVATE mbp_sim mbp_trace_reader)
 
-add_executable(mbp_tagescl_80kb
-  src/mbplib_main.cpp
-)
-set_target_properties(mbp_tagescl_80kb
-  PROPERTIES CXX_STANDARD 17 INTERPROCEDURAL_OPTIMIZATION TRUE
-)
+add_executable(mbp_tagescl_80kb src/mbplib_main.cpp)
+add_test_compile_options(mbp_tagescl_80kb)
 target_compile_definitions(mbp_tagescl_80kb PRIVATE TAGE_SC_L_SIZE=80)
-target_include_directories(mbp_tagescl_80kb PRIVATE include)
-target_compile_options(mbp_tagescl_80kb
-  PRIVATE "-Wall" "-O3" "-march=native" "-mtune=native"
-)
 target_link_libraries(mbp_tagescl_80kb PRIVATE mbp_sim mbp_trace_reader)
 
-# function(add_predictor name)
-#   add_executable(${name}
-#     src/main.cpp
-#     src/tage_sc_l.cpp
-#     include/tage_sc_l.hpp
-#     include/mbplib_compat_layer.hpp
-#     include/sbbt_branch_ahead_reader.hpp
-#     include/branch_ahead_simulate.hpp
-#   )
-#   set_target_properties(${name}
-#     PROPERTIES CXX_STANDARD 17 INTERPROCEDURAL_OPTIMIZATION TRUE
-#   )
-#   target_compile_definitions(${name} PRIVATE ${ARGN})
-#   target_include_directories(${name} PRIVATE include)
-#   target_link_libraries(${name} PRIVATE mbp_sim mbp_trace_reader)
-#   target_compile_options(${name}
-#     PRIVATE "-Wall" "-O3" "-march=native" "-mtune=native"
-#   )
-# endfunction()
+add_executable(test_spec_tagescl_64kb src/random_speculative_sbbt_sim.cpp)
+add_test_compile_options(test_spec_tagescl_64kb)
+target_compile_definitions(test_spec_tagescl_64kb
+  PRIVATE MAX_WRONG_PATH_BRANCHES=10 TAGE_SC_L_SIZE=64)
+target_link_libraries(test_spec_tagescl_64kb PRIVATE mbp_sim mbp_trace_reader)
+
+add_executable(test_spec_tagescl_80kb src/random_speculative_sbbt_sim.cpp)
+add_test_compile_options(test_spec_tagescl_80kb)
+target_compile_definitions(test_spec_tagescl_80kb
+  PRIVATE MAX_WRONG_PATH_BRANCHES=10 TAGE_SC_L_SIZE=80)
+target_link_libraries(test_spec_tagescl_80kb PRIVATE mbp_sim mbp_trace_reader)
